[package]
name = "tinkoff-invest"
version = "2.34.0"
authors = ["WatchDG <baranov@w3m.co>"]
license = "MIT OR Apache-2.0"
description = "tinkoff invest library"
homepage = "https://github.com/WatchDG/rust-tinkoff-invest"
documentation = "https://docs.rs/tinkoff-invest"
repository = "https://github.com/WatchDG/rust-tinkoff-invest"
readme = "README.md"
edition = "2024"
exclude = [
    ".github",
    ".vs",
    "src/main.rs",
    ".gitignore"
]

[dependencies]
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots", "gzip"] }
tinkoff-invest-types = { version = "2.22" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }